horizontal scroll issue resolved

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -336,6 +336,9 @@
   .info-container {
     width: 100%;
   }
+  .art-section {
+    padding: 0 !important;
+  }
 }
 
 @media (max-width: 576px) {
